--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,1 @@
-
-src/Configuration/Configuration.php
-src/Configuration/ConfigurationBDDInterface.php
-src/Configuration/ConfigurationBDDPostgreSQL.php
+src/Configuration/
