--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
     "require": {
         "symfony/http-foundation": "^6.2",
         "symfony/routing": "^6.2",
-        "symfony/http-kernel": "^6.2"
+        "symfony/http-kernel": "^6.2",
+      "ext-pdo": "*",
+        "symfony/dependency-injection": "^6.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "9.6.5"
     }
 }
