--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "symfony/http-foundation": "^6.2",
         "symfony/routing": "^6.2",
-        "symfony/http-kernel": "^6.2"
+        "symfony/http-kernel": "^6.2",
+        "twig/twig": "^3.5"
     }
 }
