--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
         "symfony/http-kernel": "^6.2",
         "twig/twig": "^3.5",
       "ext-pdo": "*",
-        "symfony/dependency-injection": "^6.2"
-    },
-    "require-dev": {
+        "symfony/dependency-injection": "^6.2",
         "phpunit/phpunit": "9.6.5"
     }
 }
